--- a/styling.css
+++ b/styling.css
@@ -44,7 +44,7 @@ h1{
     font-size: 14px;
     font-weight: 400,700;
     color: hsl(237, 12%, 33%);
-    background-image: url(./bg-pattern-desktop.svg);
+    background-image: url(faq-accordion-card-main/images/bg-pattern-desktop.svg);
     background-color: white;
     height: 460px;
     width: 460px;
